scripts/nullness/wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:38: error: (assignment) $$ 2 $$ @Initialized @NonNull byte @Initialized @Nullable [] $$ @Initialized @NonNull byte @Initialized @NonNull [] $$ ( 1727, 1733 ) $$ incompatible types in assignment.
        this.wparam = wparam;
                      ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:39: error: (assignment) $$ 2 $$ @Initialized @NonNull byte @Initialized @Nullable [] $$ @Initialized @NonNull byte @Initialized @NonNull [] $$ ( 1757, 1763 ) $$ incompatible types in assignment.
        this.lparam = lparam;
                      ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:58: error: (method.invocation) $$ 3 $$ intToByteArray(int) $$ @UnderInitialization @NonNull GWCAPacket $$ @Initialized @NonNull GWCAPacket $$ ( 2625, 2647 ) $$ call to intToByteArray(int) not allowed on the given receiver.
        this.wparam = intToByteArray(wparam);
                                    ^
  found   : @UnderInitialization @NonNull GWCAPacket
  required: @Initialized @NonNull GWCAPacket
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:59: error: (method.invocation) $$ 3 $$ intToByteArray(int) $$ @UnderInitialization @NonNull GWCAPacket $$ @Initialized @NonNull GWCAPacket $$ ( 2671, 2693 ) $$ call to intToByteArray(int) not allowed on the given receiver.
        this.lparam = intToByteArray(lparam);
                                    ^
  found   : @UnderInitialization @NonNull GWCAPacket
  required: @Initialized @NonNull GWCAPacket
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:75: error: (dereference.of.nullable) $$ 1 $$ operation $$ ( 3269, 3278 ) $$ dereference of possibly-null reference operation
        short operationId = operation.getOperationId();
                            ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:29: error: (initialization.static.field.uninitialized) $$ 1 $$ cb $$ ( 964, 992 ) $$ static field cb not initialized
    private static JComboBox cb, cbType;
                             ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:29: error: (initialization.static.field.uninitialized) $$ 1 $$ cbType $$ ( 964, 1000 ) $$ static field cbType not initialized
    private static JComboBox cb, cbType;
                                 ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: (initialization.static.field.uninitialized) $$ 1 $$ wTextField $$ ( 1005, 1042 ) $$ static field wTextField not initialized
    private static JTextField wTextField, lTextField;
                              ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: (initialization.static.field.uninitialized) $$ 1 $$ lTextField $$ ( 1005, 1054 ) $$ static field lTextField not initialized
    private static JTextField wTextField, lTextField;
                                          ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:31: error: (initialization.static.field.uninitialized) $$ 1 $$ wLabel $$ ( 1059, 1088 ) $$ static field wLabel not initialized
    private static JLabel wLabel, lLabel;
                          ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:31: error: (initialization.static.field.uninitialized) $$ 1 $$ lLabel $$ ( 1059, 1096 ) $$ static field lLabel not initialized
    private static JLabel wLabel, lLabel;
                                  ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:156: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 5610, 5624 ) $$ dereference of possibly-null reference gwcaConnection
            gwcaConnection.sendPacket(new GWCAPacket(operationToInvoke, w, l));
            ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:170: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 6048, 6062 ) $$ dereference of possibly-null reference gwcaConnection
            GWCAPacket gwcaPacket = gwcaConnection.receivePacket();
                                    ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial2.java:44: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 1911, 1925 ) $$ dereference of possibly-null reference gwcaConnection
                gwcaConnection.close();
                ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial1.java:66: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 3074, 3088 ) $$ dereference of possibly-null reference gwcaConnection
                gwcaConnection.close();
                ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:29: error: (dereference.of.nullable) $$ 1 $$ gwcaPacket.getOperation() $$ ( 964, 989 ) $$ dereference of possibly-null reference gwcaPacket.getOperation()
        byteBuffer.putShort(gwcaPacket.getOperation().getOperationId());
                                                   ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:40: error: (dereference.of.nullable) $$ 1 $$ this.namedPipe $$ ( 1500, 1514 ) $$ dereference of possibly-null reference this.namedPipe
        this.namedPipe.write(bytesToSend);
            ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:48: error: (dereference.of.nullable) $$ 1 $$ this.namedPipe $$ ( 1871, 1885 ) $$ dereference of possibly-null reference this.namedPipe
        this.namedPipe.read(byteArrayBuffer);
            ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:76: error: (dereference.of.nullable) $$ 1 $$ this.namedPipe $$ ( 2753, 2767 ) $$ dereference of possibly-null reference this.namedPipe
        this.namedPipe.close();
            ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial3.java:46: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 2117, 2131 ) $$ dereference of possibly-null reference gwcaConnection
                gwcaConnection.close();
                ^
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:61: error: (argument) $$ 4 $$ inStream $$ Properties.load $$ @Initialized @Nullable InputStream $$ @Initialized @NonNull InputStream $$ ( 2276, 2282 ) $$ incompatible argument for parameter inStream of Properties.load.
            props.load(stream);
                       ^
  found   : @Initialized @Nullable InputStream
  required: @Initialized @NonNull InputStream
../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/MainTestingAllFunctions.java:307: error: (dereference.of.nullable) $$ 1 $$ gwcaConnection $$ ( 21859, 21873 ) $$ dereference of possibly-null reference gwcaConnection
                gwcaConnection.close();
                ^
Note: ../original/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
22 errors
